force-app/main/default/objects/Birth_NeoNatal_Information__c/Birth_NeoNatal_Information__c.object-meta.xml
<CustomObject>
    <label>Birth/NeoNatal Information</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Birth/NeoNatal Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Birth/NeoNatal Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>