force-app/main/default/objects/Birth_NeoNatal_Information__c/fields/Birth_Defects__c.field-meta.xml
<CustomField>
    <fullName>Birth_Defects__c</fullName>
    <label>Birth Defects</label>
    <type>TextArea</type>
</CustomField>