force-app/main/default/objects/Birth_NeoNatal_Information__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Birth/NeoNatal Informations</relationshipLabel>
    <relationshipName>Birth_NeoNatal_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>