force-app/main/default/objects/Birth_NeoNatal_Information__c/fields/Disease_Condition_Specify__c.field-meta.xml
<CustomField>
    <fullName>Disease_Condition_Specify__c</fullName>
    <label>Disease Condition Specify</label>
    <length>100</length>
    <type>Text</type>
</CustomField>