force-app/main/default/objects/Birth_NeoNatal_Information__c/fields/Diseases_Conditions_for_Children__c.field-meta.xml
<CustomField>
    <fullName>Diseases_Conditions_for_Children__c</fullName>
    <label>Diseases/Conditions for Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>