force-app/main/default/objects/Birth_NeoNatal_Information__c/fields/Medical_Condition_Specify__c.field-meta.xml
<CustomField>
    <fullName>Medical_Condition_Specify__c</fullName>
    <label>Medical Condition Specify</label>
    <length>50</length>
    <type>Text</type>
</CustomField>