force-app/main/default/objects/Birth_NeoNatal_Information__c/fields/Medical_Conditions_For_Children__c.field-meta.xml
<CustomField>
    <fullName>Medical_Conditions_For_Children__c</fullName>
    <label>Medical Conditions For Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prematurity</fullName>
            </value>
            <value>
                <fullName>SEN/Fetal Alcohol Spectrum/Symptoms</fullName>
            </value>
            <value>
                <fullName>SEN/Positive Substance Screen(Specify)</fullName>
            </value>
            <value>
                <fullName>SEN/Substance Withdrawal Symptoms(Select)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>