force-app/main/default/objects/Birth_NeoNatal_Information__c/fields/Mother_s_Use_While_Pregnant__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Use_While_Pregnant__c</fullName>
    <label>Mother&apos;s Use While Pregnant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol Use</fullName>
            </value>
            <value>
                <fullName>Medications / Prescriptions</fullName>
            </value>
            <value>
                <fullName>Other (Specify)</fullName>
            </value>
            <value>
                <fullName>Tobacco</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Alcohol Abuse</fullName>
            </value>
            <value>
                <fullName>Drug Abuse</fullName>
            </value>
            <value>
                <fullName>Drug Use</fullName>
            </value>
            <value>
                <fullName>Over the Counter</fullName>
            </value>
            <value>
                <fullName>Abstinence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>