force-app/main/default/objects/Birth_NeoNatal_Information__c/fields/Specify__c.field-meta.xml
<CustomField>
    <fullName>Specify__c</fullName>
    <label>Specify</label>
    <length>100</length>
    <type>Text</type>
</CustomField>